--- a/core-web/libs/sdk/react/package.json
+++ b/core-web/libs/sdk/react/package.json
@@ -4,7 +4,8 @@
     "peerDependencies": {
         "react": ">=18",
         "react-dom": ">=18",
-        "@dotcms/client": "0.0.1-alpha.31"
+        "@dotcms/client": "0.0.1-alpha.31",
+        "@tinymce/tinymce-react": "^5.1.1"
     },
     "description": "Official React Components library to render a dotCMS page.",
     "repository": {
