--- a/core-web/apps/dotcms-ui/tsconfig.json
+++ b/core-web/apps/dotcms-ui/tsconfig.json
@@ -18,5 +18,9 @@
     ],
     "compilerOptions": {
         "target": "es2020"
-    }
+    },
+    "angularCompilerOptions": {
+        "strictTemplates": true,
+        "preserveWhitespaces": true,
+      }
 }
