chore: fix errors with strictTemplates

--- a/core-web/apps/dotcms-ui/tsconfig.json
+++ b/core-web/apps/dotcms-ui/tsconfig.json
@@ -20,7 +20,6 @@
         "target": "es2020"
     },
     "angularCompilerOptions": {
-        "strictTemplates": true,
-        "preserveWhitespaces": true,
-      }
+        "strictTemplates": false
+    }
 }
