#28259 Adding deploy-sdk-npm action.

--- a/.github/filters.yaml
+++ b/.github/filters.yaml
@@ -33,6 +33,9 @@ cli: &cli
   - *full_build_test
   - *backend
 
+sdk_libs: &sdk_libs
+  - 'core-web/libs/sdk/**'  
+
 jvm_unit_test:
   - *backend
   - *cli
