--- a/.github/workflows/cicd_comp_deployment-phase.yml
+++ b/.github/workflows/cicd_comp_deployment-phase.yml
@@ -35,6 +35,9 @@ on:
       publish-npm-package:
         default: false
         type: boolean
+      publish-npm-sdk-libs:
+        default: false
+        type: boolean        
     secrets:
       DOCKER_USERNAME:
         required: false
@@ -129,6 +132,15 @@ jobs:
           npm-token: ${{ secrets.NPM_ORG_TOKEN }}
           cli-artifact-run-id: ${{ github.run_id }}
 
+      - name: SDKs Publish
+        id: sdks_publish
+        if: inputs.publish-npm-sdk-libs
+        uses: ./.github/actions/core-cicd/deployment/deploy-sdk-npm
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          npm-token: ${{ secrets.NPM_ORG_TOKEN }}
+          sdk-artifact-run-id: ${{ github.run_id }}
+
       # Send Slack notification for Docker image deployment (if repository is 'dotcms/core')
       - name: Slack Notification (Docker image announcement)
         if: github.repository == 'dotcms/core'
@@ -170,3 +182,23 @@ jobs:
             }
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+
+      - name: Slack Notification (SDK announcement)
+        if: inputs.publish-npm-sdk-libs
+        uses: slackapi/slack-github-action@v1.26.0
+        with:
+          channel-id: "log-sdk-libs"
+          payload: |
+            {
+              "blocks": [              
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "> :large_orange_circle: *Attention dotters:* SDK libs (Angular, Client, Experiments and React) published!\n \n>This automated script is happy to announce that a new *_SDK libs_* version *tagged as:* [ `${{ steps.sdks_publish.outputs.npm-package-version }}` ] is now available on the `NPM` registry :package:!"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}          
