chore: fix errors

--- a/core-web/tsconfig.base.json
+++ b/core-web/tsconfig.base.json
@@ -1,145 +1,69 @@
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "rootDir": ".",
-    "sourceMap": true,
-    "declaration": false,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "importHelpers": true,
-    "target": "es2021",
-    "module": "esnext",
-    "lib": [
-      "es2017",
-      "es2020",
-      "dom",
-      "dom.iterable"
-    ],
-    "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
-    "baseUrl": ".",
-    "paths": {
-      "@components/*": [
-        "apps/dotcms-ui/src/app/view/components/*"
-      ],
-      "@directives/*": [
-        "apps/dotcms-ui/src/app/view/directives/*"
-      ],
-      "@dotcms/angular": [
-        "libs/sdk/angular/src/index.ts"
-      ],
-      "@dotcms/app/*": [
-        "apps/dotcms-ui/src/app/*"
-      ],
-      "@dotcms/block-editor": [
-        "libs/block-editor/src/public-api.ts"
-      ],
-      "@dotcms/client": [
-        "libs/sdk/client/src/index.ts"
-      ],
-      "@dotcms/contenttype-fields": [
-        "libs/contenttype-fields/src/index.ts"
-      ],
-      "@dotcms/data-access": [
-        "libs/data-access/src/index.ts"
-      ],
-      "@dotcms/dot-layout-grid": [
-        "libs/dot-layout-grid/src/public_api.ts"
-      ],
-      "@dotcms/dot-rules": [
-        "libs/dot-rules/src/public_api.ts"
-      ],
-      "@dotcms/dotcms": [
-        "libs/dotcms/src/index.ts"
-      ],
-      "@dotcms/dotcms-field-elements": [
-        "libs/dotcms-field-elements/src/index.ts"
-      ],
-      "@dotcms/dotcms-field-elements/loader": [
-        "dist/libs/dotcms-field-elements/loader"
-      ],
-      "@dotcms/dotcms-js": [
-        "libs/dotcms-js/src/public_api.ts"
-      ],
-      "@dotcms/dotcms-models": [
-        "libs/dotcms-models/src/index.ts"
-      ],
-      "@dotcms/dotcms-webcomponents": [
-        "libs/dotcms-webcomponents/src/index.ts"
-      ],
-      "@dotcms/dotcms-webcomponents/loader": [
-        "dist/libs/dotcms-webcomponents/loader"
-      ],
-      "@dotcms/edit-content": [
-        "libs/edit-content/src/index.ts"
-      ],
-      "@dotcms/experiments": [
-        "libs/sdk/experiments/src/index.ts"
-      ],
-      "@dotcms/portlets/dot-ema": [
-        "libs/portlets/edit-ema/portlet/src/index.ts"
-      ],
-      "@dotcms/portlets/dot-ema/ui": [
-        "libs/portlets/edit-ema/ui/src/index.ts"
-      ],
-      "@dotcms/portlets/dot-experiments/data-access": [
-        "libs/portlets/dot-experiments/data-access/src/index.ts"
-      ],
-      "@dotcms/portlets/dot-experiments/portlet": [
-        "libs/portlets/dot-experiments/portlet/src/index.ts"
-      ],
-      "@dotcms/portlets/dot-locales/portlet": [
-        "libs/portlets/dot-locales/portlet/src/index.ts"
-      ],
-      "@dotcms/portlets/dot-locales/portlet/data-access": [
-        "libs/portlets/dot-locales/data-access/src/index.ts"
-      ],
-      "@dotcms/react": [
-        "libs/sdk/react/src/index.ts"
-      ],
-      "@dotcms/react/mocks": [
-        "libs/sdk/react/src/lib/mocks/index.ts"
-      ],
-      "@dotcms/template-builder": [
-        "libs/template-builder/src/index.ts"
-      ],
-      "@dotcms/ui": [
-        "libs/ui/src/index.ts"
-      ],
-      "@dotcms/utils": [
-        "libs/utils/src"
-      ],
-      "@dotcms/utils-testing": [
-        "libs/utils-testing/src/index.ts"
-      ],
-      "@dotcms/utils/*": [
-        "libs/utils/src/*"
-      ],
-      "@models/*": [
-        "apps/dotcms-ui/src/app/shared/models/*"
-      ],
-      "@pipes/*": [
-        "apps/dotcms-ui/src/app/view/pipes/*"
-      ],
-      "@portlets/*": [
-        "apps/dotcms-ui/src/app/portlets/*"
-      ],
-      "@services/*": [
-        "apps/dotcms-ui/src/app/api/services/*"
-      ],
-      "@shared/*": [
-        "apps/dotcms-ui/src/app/shared/*"
-      ],
-      "@tests/*": [
-        "apps/dotcms-ui/src/app/test/*"
-      ]
-    }
-  },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+    "compileOnSave": false,
+    "compilerOptions": {
+        "rootDir": ".",
+        "sourceMap": true,
+        "declaration": false,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "moduleResolution": "node",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "importHelpers": true,
+        "target": "es2021",
+        "module": "esnext",
+        "lib": ["es2017", "es2020", "dom", "dom.iterable"],
+        "skipLibCheck": true,
+        "skipDefaultLibCheck": true,
+        "baseUrl": ".",
+        "paths": {
+            "@components/*": ["apps/dotcms-ui/src/app/view/components/*"],
+            "@directives/*": ["apps/dotcms-ui/src/app/view/directives/*"],
+            "@dotcms/angular": ["libs/sdk/angular/src/index.ts"],
+            "@dotcms/app/*": ["apps/dotcms-ui/src/app/*"],
+            "@dotcms/block-editor": ["libs/block-editor/src/public-api.ts"],
+            "@dotcms/client": ["libs/sdk/client/src/index.ts"],
+            "@dotcms/contenttype-fields": ["libs/contenttype-fields/src/index.ts"],
+            "@dotcms/data-access": ["libs/data-access/src/index.ts"],
+            "@dotcms/dot-layout-grid": ["libs/dot-layout-grid/src/public_api.ts"],
+            "@dotcms/dot-rules": ["libs/dot-rules/src/public_api.ts"],
+            "@dotcms/dotcms": ["libs/dotcms/src/index.ts"],
+            "@dotcms/dotcms-field-elements": ["libs/dotcms-field-elements/src/index.ts"],
+            "@dotcms/dotcms-field-elements/loader": ["dist/libs/dotcms-field-elements/loader"],
+            "@dotcms/dotcms-js": ["libs/dotcms-js/src/public_api.ts"],
+            "@dotcms/dotcms-models": ["libs/dotcms-models/src/index.ts"],
+            "@dotcms/dotcms-webcomponents": ["libs/dotcms-webcomponents/src/index.ts"],
+            "@dotcms/dotcms-webcomponents/loader": ["dist/libs/dotcms-webcomponents/loader"],
+            "@dotcms/edit-content": ["libs/edit-content/src/index.ts"],
+            "@dotcms/experiments": ["libs/sdk/experiments/src/index.ts"],
+            "@dotcms/portlets/dot-ema": ["libs/portlets/edit-ema/portlet/src/index.ts"],
+            "@dotcms/portlets/dot-ema/ui": ["libs/portlets/edit-ema/ui/src/index.ts"],
+            "@dotcms/portlets/dot-experiments/data-access": [
+                "libs/portlets/dot-experiments/data-access/src/index.ts"
+            ],
+            "@dotcms/portlets/dot-experiments/portlet": [
+                "libs/portlets/dot-experiments/portlet/src/index.ts"
+            ],
+            "@dotcms/portlets/dot-locales/portlet": [
+                "libs/portlets/dot-locales/portlet/src/index.ts"
+            ],
+            "@dotcms/portlets/dot-locales/portlet/data-access": [
+                "libs/portlets/dot-locales/data-access/src/index.ts"
+            ],
+            "@dotcms/react": ["libs/sdk/react/src/index.ts"],
+            "@dotcms/react/mocks": ["libs/sdk/react/src/lib/mocks/index.ts"],
+            "@dotcms/template-builder": ["libs/template-builder/src/index.ts"],
+            "@dotcms/ui": ["libs/ui/src/index.ts"],
+            "@dotcms/utils": ["libs/utils/src"],
+            "@dotcms/utils-testing": ["libs/utils-testing/src/index.ts"],
+            "@dotcms/utils/*": ["libs/utils/src/*"],
+            "@models/*": ["apps/dotcms-ui/src/app/shared/models/*"],
+            "@pipes/*": ["apps/dotcms-ui/src/app/view/pipes/*"],
+            "@portlets/*": ["apps/dotcms-ui/src/app/portlets/*"],
+            "@services/*": ["apps/dotcms-ui/src/app/api/services/*"],
+            "@shared/*": ["apps/dotcms-ui/src/app/shared/*"],
+            "@tests/*": ["apps/dotcms-ui/src/app/test/*"]
+        }
+    },
+    "exclude": ["node_modules", "tmp"]
 }
