Revert ant and jasper changes, add exclude for DotJasperTask in beans.xml

--- a/dotCMS/pom.xml
+++ b/dotCMS/pom.xml
@@ -106,6 +106,10 @@
         -->
 
         <dependency>
+            <groupId>com.dotcms</groupId>
+            <artifactId>ant-tooling</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.dotcms.lib</groupId>
             <artifactId>dot.aopalliance-repackaged</artifactId>
         </dependency>
