#28259 fixing some potential errors.

--- a/.github/actions/core-cicd/deployment/deploy-sdk-npm/action.yml
+++ b/.github/actions/core-cicd/deployment/deploy-sdk-npm/action.yml
@@ -23,6 +23,9 @@ outputs:
   npm-package-version:
     description: 'SDK libs - NPM package version'
     value: ${{ steps.next_version.outputs.next_version }}
+  published:
+    description: 'SDK libs - Published'
+    value: ${{ steps.next_version.outputs.publish }}
 runs:
   using: "composite"
   steps:
