--- a/.github/workflows/cicd_3-trunk.yml
+++ b/.github/workflows/cicd_3-trunk.yml
@@ -101,7 +101,7 @@ jobs:
     uses: ./.github/workflows/cicd_comp_deployment-phase.yml
     with:
       artifact-run-id: ${{ needs.initialize.outputs.artifact-run-id }}
-      publish-npm-sdk-libs: ${{ needs.initialize.outputs.sdk_libs != false && github.event_name != 'workflow_dispatch' }}
+      publish-npm-sdk-libs: ${{ needs.initialize.outputs.sdk_libs != 'false' && github.event_name != 'workflow_dispatch' }}
       environment: trunk
     secrets:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
