--- a/examples/astro/package.json
+++ b/examples/astro/package.json
@@ -1,17 +1,27 @@
 {
-  "name": "subsequent-singularity",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "astro": "^4.14.3",
-    "@astrojs/check": "^0.9.3",
-    "typescript": "^5.5.4"
-  }
+    "name": "dotcms-astro-uve",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro check && astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/check": "^0.9.3",
+        "@astrojs/react": "^3.6.2",
+        "@astrojs/tailwind": "^5.1.0",
+        "@astrojs/vercel": "^7.8.0",
+        "@dotcms/client": "0.0.1-alpha.31",
+        "@dotcms/react": "0.0.1-alpha.31",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "astro": "^4.14.3",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "tailwindcss": "^3.4.10",
+        "typescript": "^5.5.4"
+    }
 }
