--- a/core-web/libs/sdk/client/project.json
+++ b/core-web/libs/sdk/client/project.json
@@ -34,7 +34,7 @@
         "publish": {
             "executor": "nx:run-commands",
             "options": {
-                "command": "node tools/scripts/publish.mjs sdk-js-client {args.ver} {args.tag}"
+                "command": "node tools/scripts/publish.mjs sdk-client {args.ver} {args.tag}"
             },
             "dependsOn": ["build"]
         },
