--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -306,7 +306,7 @@
                                         <log>listening on IPv4 address "0.0.0.0", port 5432</log>
                                     </wait>
                                     <log>
-                                        <prefix>DB:</prefix>
+                                        <prefix>[DB]</prefix>
                                         <color>magenta</color>
                                     </log>
                                 </run>
@@ -345,7 +345,7 @@
                                         <shutdown>5000</shutdown>
                                     </wait>
                                     <log>
-                                        <prefix>ES:</prefix>
+                                        <prefix>[ES]</prefix>
                                         <color>cyan</color>
                                     </log>
                                 </run>
@@ -392,7 +392,7 @@
                                         <link>opensearch:es</link>
                                     </links>
                                     <log>
-                                        <prefix>DOTCMS:</prefix>
+                                        <prefix>[DOTCMS]</prefix>
                                         <color>cyan</color>
                                     </log>
                                 </run>
@@ -708,6 +708,13 @@
 
                         <trimStackTrace>false</trimStackTrace>
                     </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.maven.surefire</groupId>
+                            <artifactId>surefire-junit47</artifactId>
+                            <version>${version.failsafe.plugin}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -861,6 +868,13 @@
                         <systemPropertyVariables/>
                         <trimStackTrace>true</trimStackTrace>
                     </configuration>
+                   <dependencies>
+                        <dependency>
+                            <groupId>org.apache.maven.surefire</groupId>
+                            <artifactId>surefire-junit47</artifactId>
+                            <version>${version.surefire.plugin}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
