--- a/dotCMS/pom.xml
+++ b/dotCMS/pom.xml
@@ -15,8 +15,6 @@
         <palantirJavaFormat.version>2.29.0</palantirJavaFormat.version>
         <src.dir>${project.basedir}/src/main/java</src.dir>
         <test.src.dir>${project.basedir}/src/test/java</test.src.dir>
-        <version.spotless.plugin>2.36.0</version.spotless.plugin>
-        <batik.version>1.16</batik.version>
         <glowroot.version>0.14.1</glowroot.version>
         <version.cargo.plugin>1.10.6</version.cargo.plugin>
         <assembly-directory>${basedir}/target/dist</assembly-directory>
@@ -27,6 +25,8 @@
         <buildDocker>true</buildDocker>
         <tomcat-dist-folder>dotserver/tomcat-${tomcat.version}</tomcat-dist-folder>
         <tomcat-lib-folder>${assembly-directory}/${tomcat-dist-folder}/lib</tomcat-lib-folder>
+        <tomcat-log4j-lib-folder>${assembly-directory}/${tomcat-dist-folder}/log4j2/lib</tomcat-log4j-lib-folder>
+        <session-manager-lib-folder>${assembly-directory}/${tomcat-dist-folder}/session-manager/lib</session-manager-lib-folder>
         <tomcat9-overrides>${project.basedir}/src/main/resources/container/tomcat9</tomcat9-overrides>
         <exploded-webapp-dir>${assembly-directory}/${tomcat-dist-folder}/webapps/ROOT</exploded-webapp-dir>
         <war.output.file>${project.build.directory}/${project.build.finalName}-war.war</war.output.file>
@@ -63,10 +63,6 @@
         <test.felix.undeployed.folder>felix/core/undeployed</test.felix.undeployed.folder>
         <test.felix.system.undeployed.folder>felix/system/undeployed</test.felix.system.undeployed.folder>
         <!-- <docker.platforms>linux/arm64,linux/amd64</docker.platforms>-->
-        <tomcat.redis-session-manager.version>1.3</tomcat.redis-session-manager.version>
-        <commons-pool2.version>2.11.1</commons-pool2.version>
-        <org.slfj4.version>1.7.36</org.slfj4.version>
-        <jedis.version>4.4.6</jedis.version>
         <tomcat.run.data.folder>${project.build.directory}/tomcat-run-data/${context.name}</tomcat.run.data.folder>
         <cleanup.data.folder>false</cleanup.data.folder>
         <!-- Add enterprise to sonar sources -->
@@ -86,6 +82,11 @@
             <artifactId>dotcms-core-bundles</artifactId>
             <version>${project.version}</version>
             <type>zip</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.dotcms</groupId>
+            <artifactId>tomcat-redis-session-manager</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -1351,21 +1352,30 @@
             <!-- Support Java Commons Logging API in Log4j2 -->
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-jcl</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
-            <!-- Support SLF4j2 API in Log4j2 -->
+            <!-- Support Java Commons Logging API in Log4j2 -->
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j2-impl</artifactId>
+            <artifactId>log4j-jcl</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
-            <!-- Servlet container initialization of Log4j2 -->
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <!-- Added to tomcat classpath -->
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-web</artifactId>
+            <artifactId>log4j-appserver</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <!-- Async support for Log4J 2.x -->
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- Graalvm Js Engine -->
@@ -1402,6 +1412,12 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-catalina</artifactId>
+            <version>${tomcat.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
@@ -1535,37 +1551,69 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>com.dotcms</groupId>
-                                    <artifactId>tomcat-redis-session-manager</artifactId>
-                                    <version>${tomcat.redis-session-manager.version}</version>
+                                    <groupId>org.apache.logging.log4j</groupId>
+                                    <artifactId>log4j-api</artifactId>
                                     <type>jar</type>
-                                    <overWrite>true</overWrite>
-                                    <outputDirectory>${tomcat-lib-folder}</outputDirectory>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${tomcat-log4j-lib-folder}</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>org.apache.commons</groupId>
-                                    <artifactId>commons-pool2</artifactId>
-                                    <version>${commons-pool2.version}</version>
+                                    <groupId>org.apache.logging.log4j</groupId>
+                                    <artifactId>log4j-core</artifactId>
                                     <type>jar</type>
-                                    <overWrite>true</overWrite>
-                                    <outputDirectory>${tomcat-lib-folder}</outputDirectory>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${tomcat-log4j-lib-folder}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.logging.log4j</groupId>
+                                    <artifactId>log4j-appserver</artifactId>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${tomcat-log4j-lib-folder}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.logging.log4j</groupId>
+                                    <artifactId>log4j-slf4j2-impl</artifactId>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${tomcat-log4j-lib-folder}</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.slf4j</groupId>
                                     <artifactId>slf4j-api</artifactId>
-                                    <version>${org.slfj4.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${tomcat-log4j-lib-folder}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>com.dotcms</groupId>
+                                    <artifactId>tomcat-redis-session-manager</artifactId>
                                     <type>jar</type>
                                     <overWrite>true</overWrite>
-                                    <outputDirectory>${tomcat-lib-folder}</outputDirectory>
+                                    <outputDirectory>${session-manager-lib-folder}</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.commons</groupId>
+                                    <artifactId>commons-pool2</artifactId>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${session-manager-lib-folder}</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>redis.clients</groupId>
                                     <artifactId>jedis</artifactId>
-                                    <version>${jedis.version}</version>
                                     <type>jar</type>
                                     <overWrite>true</overWrite>
-                                    <outputDirectory>${tomcat-lib-folder}</outputDirectory>
+                                    <outputDirectory>${session-manager-lib-folder}</outputDirectory>
                                 </artifactItem>
+
+                                <dependency>
+                                    <!-- Async support for Log4J 2.x -->
+                                    <groupId>com.lmax</groupId>
+                                    <artifactId>disruptor</artifactId>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${tomcat-log4j-lib-folder}</outputDirectory>
+                                </dependency>
                             </artifactItems>
                         </configuration>
                     </execution>
@@ -1913,12 +1961,6 @@
                                             <file>${tomcat9-overrides}/bin/setenv.sh</file>
                                             <todir>bin</todir>
                                         </configfile>
-                                        <!--
-                                        <configfile>
-                                            <file>${tomcat9-overrides}/conf/catalina.properties</file>
-                                            <todir>conf</todir>
-                                        </configfile>
-                                        -->
                                         <configfile>
                                             <file>${tomcat9-overrides}/conf/server.xml</file>
                                             <todir>conf</todir>
