--- a/dotcms-postman/pom.xml
+++ b/dotcms-postman/pom.xml
@@ -113,7 +113,7 @@
                                     </bind>
                                 </volumes>
                                 <log>
-                                    <prefix>WireMock:</prefix>
+                                    <prefix>[WireMock]</prefix>
                                     <color>green</color>
                                 </log>
                                 <env>
