issue-28941 Minor refactoring to modify Improve password validation message

--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -4739,7 +4739,7 @@ user-id=User ID
 User-Info-Save-Failed=User Information Save Failed
 User-Info-Save-First-Name-Failed=First Name not valid
 User-Info-Save-Last-Name-Failed=Last Name not valid
-User-Info-Save-Password-Failed=The password does not meet the system security requirements. It must contain at least 8 characters and no white spaces.
+User-Info-Save-Password-Failed=Your password must be at least 8 characters long and include at least and one special character from the list  # % + : = ? @ It must not contain spaces.
 User-Info-Save-Password-Recycle-Failed=The password has been already used lately and cannot be reused yet.
 user-info-saved=User info saved
 User-Info-Saved=User Information Saved
