--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -10,9 +10,6 @@
   },
   "private": true,
   "dependencies": {
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.2",
     "@angular/animations": "^17.1.0",
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
@@ -21,9 +18,12 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
-    "@dotcms/client": "0.0.1-alpha.31",
     "@dotcms/angular": "0.0.1-alpha.31",
-    "@tinymce/tinymce-angular": "^8.0.0"
+    "@dotcms/client": "file:../../core-web/dist/libs/sdk/client/dotcms-client-0.0.1-alpha.31.tgz",
+    "@tinymce/tinymce-angular": "^8.0.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.7",
