#28721 include in 24.04.24 LTS

--- a/dotcms-postman/pom.xml
+++ b/dotcms-postman/pom.xml
@@ -117,6 +117,9 @@
                                     <prefix>WireMock:</prefix>
                                     <color>green</color>
                                 </log>
+                                <env>
+                                    <WIREMOCK_OPTIONS>--verbose</WIREMOCK_OPTIONS>
+                                </env>
                             </run>
                         </wiremock>
                         <dotcms>
@@ -135,6 +138,8 @@
                                     <DOT_APP_AI_PARAM_API_URL>http://wm:8080/c</DOT_APP_AI_PARAM_API_URL>
                                     <DOT_APP_AI_PARAM_API_IMAGE_URL>http://wm:8080/i</DOT_APP_AI_PARAM_API_IMAGE_URL>
                                     <DOT_APP_AI_PARAM_API_KEY>${wiremock.api.key}</DOT_APP_AI_PARAM_API_KEY>
+                                    <DOT_OPEN_AI_EMBEDDINGS_URL>http://wm:8080/e</DOT_OPEN_AI_EMBEDDINGS_URL>
+                                    <DOT_DOTCMS_DEV_MODE>true</DOT_DOTCMS_DEV_MODE>
                                 </env>
                                 <links combine.children="append">
                                     <link>wiremock:wm</link>
